# ehs_sys

./: .env  .gitignore  AUTH_REDIRECT_FIX.md  BACKEND_IMPLEMENTATION_GUIDE.md  BEFORE_AFTER_COMPARISON.md  CLEANUP_REPORT.md  CONSOLE_OUTPUT_EXAMPLES.md  DATABASE_CLEANUP_REPORT.md  DATABASE_ERD.md  DATABASE_IMPROVEMENT_PLAN.md  DATABASE_IMPROVEMENT_README.md  DATABASE_IMPROVEMENT_SUMMARY.md  DATABASE_IMPROVEMENT_SUMMARY_v2.md  DATABASE_MIGRATION_REPORT.md  DATABASE_SETUP.md  DOCKER_DATABASE_SETUP.md  DOCS_NAVIGATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LOGIN_PAGE_PREVIEW.md  LOGIN_REGISTER_IMPLEMENTATION.md  NEW_BUSINESS_LOGIC_GUIDE.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  README.md  REGISTRATION_FLOW_UPDATE.md  ROUTES_CLEANUP_REPORT.md  ROUTE_FIX_GUIDE.md  START_SERVER.md  TESTING_GUIDE.md  check_admin.py  config.py  create_admin.py  create_admin_direct.py  main.py  project_plan.md  pyproject.toml  start-docker-db.sh  start-server.sh  stop-server.sh
.trae/rules/: project_rules.md
api/: model.py  model_trans.py
core/: init_admin.py  password.py
db/: IMPLEMENTATION_SUMMARY.md  README.md  TABLE_RELATIONSHIPS.md  USAGE_GUIDE.md  connection.py  create_tables.sql  crud.py  db_config_info.md  db_info.md  encode_data.py  models.py
local_test/: enterpries_test_data.py
routes/: CLEANUP_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  RESTRUCTURE_SUMMARY.md  ROUTES_STRUCTURE.md  STRUCTURE.md  SUMMARY.md  __init__.py  auth.py  dependencies.py
web/: README.md  package-lock.json  package.json  vite.config.ts
(+101 files in other folders)
