[project]
name = "ehs-sys"
version = "0.1.0"
description = "this is a ehs system demo"
authors = [
    {name = "jqz"}
]
readme = ""
requires-python ="==3.11.8"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.10.1",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
]


#[build-system]
#requires = ["poetry-core>=2.0.0,<3.0.0"]
#build-backend = "poetry.core.masonry.api"
